; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_remote.c_fetch_remote.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_remote.c_fetch_remote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"fetch\00", align 1
@verbose = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [3 x i8] c"-v\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"Updating %s\00", align 1
@RUN_GIT_CMD = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [19 x i8] c"Could not fetch %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @fetch_remote to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fetch_remote(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca [4 x i8*], align 16
  store i8* %0, i8** %3, align 8
  %5 = getelementptr inbounds [4 x i8*], [4 x i8*]* %4, i64 0, i64 0
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %6 = getelementptr inbounds i8*, i8** %5, i64 1
  %7 = load i8*, i8** %3, align 8
  store i8* %7, i8** %6, align 8
  %8 = getelementptr inbounds i8*, i8** %6, i64 1
  store i8* null, i8** %8, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i64 1
  store i8* null, i8** %9, align 8
  %10 = load i64, i64* @verbose, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = getelementptr inbounds [4 x i8*], [4 x i8*]* %4, i64 0, i64 1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8** %13, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = getelementptr inbounds [4 x i8*], [4 x i8*]* %4, i64 0, i64 2
  store i8* %14, i8** %15, align 16
  br label %16

16:                                               ; preds = %12, %1
  %17 = call i32 @_(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %18 = load i8*, i8** %3, align 8
  %19 = call i32 @printf_ln(i32 %17, i8* %18)
  %20 = getelementptr inbounds [4 x i8*], [4 x i8*]* %4, i64 0, i64 0
  %21 = load i32, i32* @RUN_GIT_CMD, align 4
  %22 = call i64 @run_command_v_opt(i8** %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %16
  %25 = call i32 @_(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0))
  %26 = load i8*, i8** %3, align 8
  %27 = call i32 @error(i32 %25, i8* %26)
  store i32 %27, i32* %2, align 4
  br label %29

28:                                               ; preds = %16
  store i32 0, i32* %2, align 4
  br label %29

29:                                               ; preds = %28, %24
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @printf_ln(i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i64 @run_command_v_opt(i8**, i32) #1

declare dso_local i32 @error(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
